src/main/resources/site/css/custom-themes.css
/*
 * Base structure
 * @author Kristian Hansen
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}

html,body {
    height: 100%;
}

.invert {
    background-color: #1f1e1e !important;
    color: #dcdcdc;
}
/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}

.enlarger {
    position: relative;
    width: 100%;
    height: 100%;
    border: none;
}

.heading-left {
    position: relative;
    width: 59%;
    float: left;
    margin-right: 1%;
    padding-top: 4px;
    padding-bottom: 4px;
}

.heading-right {
    position: relative;
    width: 40%;
    float: left;
    padding-top: 4px;
    padding-bottom: 4px;
}
.row-type {
    position: relative;
    display: block;
    height: 40%;
    margin-bottom: 1%;
}

/* java code screen styling */
#code-output-display {
    position: relative;
    display: block;
    border: 1px solid black;
    border-radius: 5px;
    width: 59%;
    height: 100%;
    float: left;
    margin-right: 1%;
    resize: none;
}

#task-instructions-display {
     position: relative;
    border: 1px solid black;
    border-radius: 5px;
    width: 40%;
    height: 100%;
    float: left;
    resize: none;
    display: block;
    background: #fafafa;
    padding:10px;
}
.invert #task-instructions-display {
    background: #1D1F21 !important;
}
.invert #console-output-screen {
    background: #1D1F21 !important;
}
#user-input-box {
     position: relative;
   border: 1px solid black;
    border-radius: 5px;
    width: 59%;
    height: 100%;
    float: left;
    margin-right: 1%;
    resize: none; 
    display: block;
}

#console-output-screen {
     position: relative;
       border: 1px solid black;
    border-radius: 5px;
    width: 40%;
    height: 100%;
    resize: none;
    float: left;
    display: block;
    background: #fafafa;
    padding:10px;
}

#junit-test-list-table {
    position: relative;
    width: 100%;
}

.l-col {
    text-align: left;
    width: 60%;
    max-width: 60%;
    word-wrap: break-word;
    border-bottom: 1px solid black;
    border-right: 1px solid black;
    padding-left: 5px;
}

.r-col {
    text-align: center;
    width: 40%;
    max-width: 40%;
    word-wrap: break-word;
    border-bottom: 1px solid black;
}

th {
    text-align: center;
    font-weight: 300;
}


/*
 * Main content
 */

.main {
  padding: 20px;
  width: 100%;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}


/*
 * dropdown menu css.
 * The following code was taken and adapted from: https://bootsnipp.com/snippets/featured/multi-level-dropdown-menu-bs3
 * The HTML for this stuff located in index.html is also from the above website
 */
.dropdown {
    display: inline;
}

.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border: 5px solid transparent;
    border-right-width: 0;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}
/*Show icons for tests (pass)*/
#code-output-display .ace_gutter-cell.ace_info {
    background-image: url("../images/testPassed.png") !important
 }
/*Show icons for tests (fail)*/
#code-output-display .ace_gutter-cell.ace_error {
    background-image: url("../images/testError.png") !important
}
/**/
.ace_marker-layer .ace_underline {
    position: absolute;
    z-index: 4;
    border-bottom: solid red 3px;
}

